--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
       </div>
       <h4 style="text-align: center">-- OR --<br/>more specifically:</h4>
       {{#each categories}}
-        <button type="button" class="btn btn-primary btn-block" onclick="window.location.href='/?category={{@index}}'">
+        <button type="button" class="btn btn-primary btn-block" onclick="window.location.href='/mylab?category={{@index}}'">
           {{this}}
         </button>
       {{/each}}
